# bapsflib

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pep8speaks.yml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: changelog.yml  check_pr_changelog.yml  linters.yml  python-publish.yml  tests.yml
LICENSE/: python.txt
LICENSES/: LICENSE.txt  license_hdf5.txt  python.txt
bapsflib/: __init__.py
bapsflib/_hdf/: __init__.py
bapsflib/_hdf_mappers/: __init__.py
bapsflib/lapd/: __init__.py  files.py  hdferrors.py  hdfmapper.py  hdfoverview.py  hdfreadcontrol.py  hdfreaddata.py
bapsflib/lapdhdf/: __init__.py  files.py  hdfcheck.py  hdfchecks.py  hdferrors.py  hdfmapper.py  hdfmappers.py  hdfmappers_msi.py  hdfmappers_old.py  hdfoverview.py  hdfreadcontrol.py  hdfreaddata.py  hdfreadmsi.py
bapsflib/lapdtoolbox/: __init__.py
bapsflib/phys180E/: __init__.py
bapsflib/plasma/: __init__.py  constants.py  core.py  parameters.py
bapsflib/test_hdfFiles/: Jan28_Run1.hdf5  raptor056-sep26.hdf5  raptor87-nov02.hdf5
bapsflib/tools/: __init__.py  readers.py
bapsflib/utils/: __init__.py  decorators.py  errors.py  exceptions.py  helpers.py  warnings.py
changelog/: 100.bugfix.rst  101.pkg_management.1.rst  101.pkg_management.2.rst  101.trivial.1.rst  126.pkg_management.rst  132.removal.rst  133.pkg_management.rst  134.feature.1.rst  134.feature.2.rst  134.feature.3.rst  135.trivial.rst  136.pkg_management.rst  139.doc.rst  140.doc.rst  140.pkg_management.rst  141.feature.1.rst  141.feature.2.rst  141.feature.3.rst  141.feature.4.rst  141.feature.5.rst  141.feature.6.rst  141.trivial.1.rst  141.trivial.2.rst  141.trivial.3.rst  141.trivial.4.rst  154.feature.1.rst  154.pkg_management.rst  156.trivial.1.rst  156.trivial.2.rst  156.trivial.3.rst  158.feature.rst  159.feature.1.rst  159.feature.2.rst  160.breaking.rst  161.feature.rst  162.feature.rst  172.bugfix.1.rst  172.bugfix.2.rst  173.pkg_management.1.rst  173.pkg_management.2.rst  (+81 more)
doc/: conf.py
docs/: Makefile  about.rst  aps_examples.rst  changelog.rst  conf.py  contributing.rst  genindex.rst  getstarted.rst  glossary.rst  howtos.rst  index.html  index.rst  installation.rst  make.bat  packageindex.rst  py-modindex.rst  requirements.txt  structure.rst
docs/_static/: rtd_theme_overrides.css
docs/api_static/: bapsflib._hdf.maps.controls.bmotion.rst  bapsflib._hdf.maps.controls.clparse.rst  bapsflib._hdf.maps.controls.contype.rst  bapsflib._hdf.maps.controls.map_controls.rst  bapsflib._hdf.maps.controls.n5700ps.rst  bapsflib._hdf.maps.controls.nixyz.rst  bapsflib._hdf.maps.controls.nixz.rst  bapsflib._hdf.maps.controls.parsers.rst  bapsflib._hdf.maps.controls.phys180e.rst  bapsflib._hdf.maps.controls.rst  bapsflib._hdf.maps.controls.sixk.rst  bapsflib._hdf.maps.controls.templates.rst  bapsflib._hdf.maps.controls.types.rst  bapsflib._hdf.maps.controls.waveform.rst  bapsflib._hdf.maps.core.rst  bapsflib._hdf.maps.digitizers.lecroy.rst  bapsflib._hdf.maps.digitizers.map_digis.rst  bapsflib._hdf.maps.digitizers.rst  bapsflib._hdf.maps.digitizers.sis3301.rst  bapsflib._hdf.maps.digitizers.siscrate.rst  bapsflib._hdf.maps.digitizers.templates.rst  bapsflib._hdf.maps.hdfmap.rst  bapsflib._hdf.maps.mapper.rst  bapsflib._hdf.maps.msi.discharge.rst  bapsflib._hdf.maps.msi.gaspressure.rst  bapsflib._hdf.maps.msi.heater.rst  bapsflib._hdf.maps.msi.interferometerarray.rst  bapsflib._hdf.maps.msi.magneticfield.rst  bapsflib._hdf.maps.msi.map_msi.rst  bapsflib._hdf.maps.msi.rst  bapsflib._hdf.maps.msi.templates.rst  bapsflib._hdf.maps.rst  bapsflib._hdf.maps.templates.rst  bapsflib._hdf.rst  bapsflib._hdf.utils.file.rst  bapsflib._hdf.utils.hdfoverview.rst  bapsflib._hdf.utils.hdfreadcontrols.rst  bapsflib._hdf.utils.hdfreaddata.rst  bapsflib._hdf.utils.hdfreadmsi.rst  bapsflib._hdf.utils.helpers.rst  (+22 more)
docs/background/: hdf5_structure.inc.rst  main.rst
docs/changelog/: 1.0.0.rst  1.0.1.rst  1.0.2.rst  2.0.0.rst  2.1.0.rst  2025.3.0.rst  2025.6.0.rst  2026.3.0.rst  2026.3.1.rst  dev.rst  index.rst
docs/contributing/: main.rst
docs/hdfmap/: add_map_module.inc.rst  main.rst  mapping.inc.rst
docs/howtos/: afteropen.inc.rst  file_info.inc.rst  file_overview.inc.rst  file_overview__sample_brief.inc.rst  file_overview__sample_detailed.inc.rst  main.rst  mapping.rst  openfile.inc.rst  openfile.rst  read_from_digi.inc.rst  read_from_msi.inc.rst  readdata.inc.rst  readdata.rst
docs/src/: bapsflib._hdf.controls.clparse.rst  bapsflib._hdf.controls.contype.rst  bapsflib._hdf.controls.map_controls.rst  bapsflib._hdf.controls.n5700ps.rst  bapsflib._hdf.controls.rst  bapsflib._hdf.controls.sixk.rst  bapsflib._hdf.controls.templates.rst  bapsflib._hdf.controls.waveform.rst  bapsflib._hdf.digitizers.map_digis.rst  bapsflib._hdf.digitizers.rst  bapsflib._hdf.digitizers.sis3301.rst  bapsflib._hdf.digitizers.siscrate.rst  bapsflib._hdf.digitizers.templates.rst  bapsflib._hdf.maps.controls.clparse.rst  bapsflib._hdf.maps.controls.n5700ps.rst  bapsflib._hdf.maps.controls.nixyz.rst  bapsflib._hdf.maps.controls.rst  bapsflib._hdf.maps.digitizers.rst  bapsflib._hdf.maps.digitizers.sis3301.rst  bapsflib._hdf.maps.hdfmap.rst  bapsflib._hdf.maps.msi.discharge.rst  bapsflib._hdf.maps.msi.heater.rst  bapsflib._hdf.maps.msi.magneticfield.rst  bapsflib._hdf.maps.msi.map_msi.rst  bapsflib._hdf.maps.rst  bapsflib._hdf.msi.discharge.rst  bapsflib._hdf.msi.gaspressure.rst  bapsflib._hdf.msi.heater.rst  bapsflib._hdf.msi.interferometerarray.rst  bapsflib._hdf.msi.magneticfield.rst  bapsflib._hdf.msi.map_msi.rst  bapsflib._hdf.msi.rst  bapsflib._hdf.msi.templates.rst  bapsflib._hdf.rst  bapsflib._hdf.utils.hdfreadcontrol.rst  bapsflib._hdf.utils.hdfreaddata.rst  bapsflib._hdf.utils.helpers.rst  bapsflib._hdf.utils.rst  bapsflib._hdf_mappers.controls.clparse.rst  (+67 more)
requirements/: build.txt  docs.txt  extras.txt  install.txt  tests.txt
sphinx-docs/: conf.py  index.rst  make.bat
(+374 files in other folders)
