[build-system]
requires = [
  "setuptools >= 41.2",
  "setuptools_scm",
  "wheel >= 0.29.0",
]  # ought to mirror 'requirements/build.txt'
build-backend = "setuptools.build_meta"

[tool.towncrier]
  package = "bapsflib"
  filename = "CHANGELOG.rst"
  directory = "changelog"
  issue_format = "`#{issue} <https://github.com/BaPSF/bapsflib/pull/{issue}>`_"
  title_format = "v{version} ({project_date})"

  [[tool.towncrier.type]]
      directory = "breaking"
      name = "Backwards Incompatible Changes"
      showcontent = true

  [[tool.towncrier.type]]
    directory = "removal"
    name = "Deprecations and Removals"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation Improvements"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "trivial"
    name = "Trivial/Internal Changes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "pkg_management"
    name = "Package Management"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "pkg_management"
    name = "Package Management"
    showcontent = true

[tool.changelog_bot]
  [tool.changelog_bot.towncrier_changelog]
    enabled = true
    changelog_skip_label = "No changelog needed"
