[metadata]
name = bapsflib
author = Basic Plasma Science Facility
maintainer = Erik T. Everson
maintainer_email = eeverson@physics.ucla.edu
description = A toolkit for handling data collected at BaPSF
long_description = file: README.md
long_description_content_type = text/markdown
license = 3-clause BSD
license_file = LICENSES/LICENSE.txt
url = https://github.com/BaPSF/bapsflib
download_url = https://pypi.org/project/bapsflib/
project_urls =
    BaPSF = http://plasma.physics.ucla.edu/
    Documentation = https://bapsflib.readthedocs.io/en/latest/
    GitHub = https://github.com/BaPSF/bapsflib
keywords = bapsf, HDF5, lapd, physics, plasma, plasma physics, science
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
zip_safe = false
packages = find:
include_package_data = True
setup_requires =
    # PEP-518 encourages the use of pyproject.toml for defining
    # build dependencies...they should be defined under build-system.requires
install_requires =
    # ought to mirror requirements/install.txt
    astropy >= 3.1, <= 4.1
    h5py >= 2.8, <= 2.10.0
    numpy >= 1.14
    scipy >= 0.19
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
extras =
    # ought to mirror requirements/extras.txt
    # for developers
    isort
tests =
    # ought to mirror requirements/tests.txt
    %(extras)s
    codecov >= 2.0.15
    coverage >= 4.5.1
docs =
    # ought to mirror requirements/docs.txt
    %(extras)s
    sphinx >= 3.2.0
    sphinx-automodapi >= 0.13
    sphinx-changelog
    sphinx-gallery
    sphinx_rtd_theme
    towncrier >= 19.2.0
developer =
    # install everything for developers
    %(docs)s
    %(extras)s
    %(tests)s
